--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,2 +1,52 @@
-<h1>Drivers#index</h1>
-<p>Find me in app/views/drivers/index.html.erb</p>
+<div class='container-fluid'>
+  <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Manufacturer</th>
+        <th>Size</th>
+        <th>Cut Out</th>
+        <th>Model Number</th>
+        <th>Resistance</th>
+        <th>RMS Power</th>
+        <th>Sensitivity</th>
+        <th>X_max</th>
+        <th>Fs</th>
+        <th>Vas</th>
+        <th>Qts</th>
+        <th>Low Frequency Limit</th>
+        <th>High Frequency Limit</th>
+        <th>Sealed Volume</th>
+        <th>Sealed F3</th>
+        <th>Vented Volume</th>
+        <th>Vented F3</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @drivers.each do |driver| %>
+        <tr>
+          <td><%= driver[:id] %></td>
+          <td><%= driver.manufacturer.name %></td>
+          <td><%= driver[:size] %></td>
+          <td><%= driver[:cut_out] %></td>
+          <td><%= driver[:model_no] %></td>
+          <td><%= driver[:link] %></td>
+          <td><%= driver[:resistance] %></td>
+          <td><%= driver[:rms_power] %></td>
+          <td><%= driver[:sensitivity] %></td>
+          <td><%= driver[:x_max] %></td>
+          <td><%= driver[:fs] %></td>
+          <td><%= driver[:vas] %></td>
+          <td><%= driver[:qts] %></td>
+          <td><%= driver[:low_frequency_limit] %></td>
+          <td><%= driver[:high_frequency_limit] %></td>
+          <td><%= driver[:sealed_volume] %></td>
+          <td><%= driver[:sealed_f3] %></td>
+          <td><%= driver[:vented_volume] %></td>
+          <td><%= driver[:vented_f3] %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br><br>
+</div>
