--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -3,12 +3,52 @@
   <table>
     <tbody>
       <tr>
+        <td>Minimum size </td>
+        <td><input type="text" id="min_size" name="min_size"></td>
+      </tr>
+      <tr>
+        <td>Maximum size </td>
+        <td><input type="text" id="max_size" name="max_size"></td>
+      </tr>
+      <tr>
         <td>Minimum RMS power </td>
-        <td><input type="text" id="min" name="min"></td>
+        <td><input type="text" id="min_rms" name="min_rms"></td>
       </tr>
       <tr>
         <td>Maximum RMS power </td>
-        <td><input type="text" id="max" name="max"></td>
+        <td><input type="text" id="max_rms" name="max_rms"></td>
+      </tr>
+      <tr>
+        <td>Minimum Xmax </td>
+        <td><input type="text" id="min_xmax" name="min_xmax"></td>
+      </tr>
+      <tr>
+        <td>Maximum Xmax </td>
+        <td><input type="text" id="max_xmax" name="max_xmax"></td>
+      </tr>
+      <tr>
+        <td>Minimum Qts </td>
+        <td><input type="text" id="min_qts" name="min_qts"></td>
+      </tr>
+      <tr>
+        <td>Maximum Qts </td>
+        <td><input type="text" id="max_qts" name="max_qts"></td>
+      </tr>
+      <tr>
+        <td>Minimum Sealed Volume </td>
+        <td><input type="text" id="min_svol" name="min_svol"></td>
+      </tr>
+      <tr>
+        <td>Maximum Sealed Volume </td>
+        <td><input type="text" id="max_svol" name="max_svol"></td>
+      </tr>
+      <tr>
+        <td>Minimum Sealed F3 </td>
+        <td><input type="text" id="min_sf3" name="min_sf3"></td>
+      </tr>
+      <tr>
+        <td>Maximum Sealed F3 </td>
+        <td><input type="text" id="max_sf3" name="max_sf3"></td>
       </tr>
     </tbody>
   </table>
